# BCIIP

./: .dockerignore  .gitignore  Dockerfile  PROJECT_SPEC.md  PROMPTS.md  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
.github/workflows/: backend-publish.yml  docker-publish.yml  frontend-deploy.yml
libs/categorization/: categorizer.py
libs/embeddings/: embedder.py
libs/entity_extraction/: extractor.py
libs/language_detection/: detector.py
libs/summarization/: summarizer.py
libs/text_cleaning/: cleaner.py
libs/utils/: config.py
scripts/: add_summary_columns.py  add_topic_confidence_column.py  create_entity_tables.py  download_models.py  enable_pgvector.py  verify_all.py  verify_phase_0.py  verify_phase_1.py  verify_phase_11.py  verify_phase_12.py  verify_phase_13.py  verify_phase_2.py  verify_phase_3.py  verify_phase_4.py  verify_phase_5.py  verify_phase_6.py  verify_phase_7.py  verify_phase_8.py  verify_phase_9.py
services/: celery_app.py
services/api/: main.py  models.py  schemas.py
services/crawler/: main.py  rss_fetcher.py  sitemap_fetcher.py
services/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
services/frontend/src/: App.css  App.jsx  index.css  main.jsx
services/processor/: main.py
